# gjf

./: CHANGELOG.md  LICENSE  README.md  setup.cfg  upload_to_pypi.sh
gjf/: __init__.py  __main__.py  cli.py  geojson_fixer.py
src/gjf/: __init__.py  cli.py  geojson_fixer.py
