[metadata]
name = gjf
version = attr: gjf.__init__.__version__
author = Yazeed Almuqwishi
author_email = yazeed.almuqwishi@gmail.com
keywords = geojson, fix, python, cli, validation
description =  A tool to fix invalid GeoJSON objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yazeed44/gjf
project_urls =
    Bug Tracker = https://github.com/yazeed44/gjf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    geojson
    geojson-rewind
    click
    Shapely >= 1.8a1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gjf = gjf.cli:main